updated c-fcs redundancy img

--- a/cfcs.html
+++ b/cfcs.html
@@ -45,8 +45,11 @@
           <h1>Common Flight Control System (C-FCS)</h1>
           <!-- <a name="value"></a> --> 
           <br>
-          <p>We are developing C-FCS for safe control of aircraft ranging from small hand-launched unmanned aircraft to large, manned aircraft by leveraging the capability of plug-and-play sensors, processors, and actuators. A common system allows for standardization across a fleet of varying types of aircraft which reduces training, maintenance, logistics and upgrade costs. C-FCS can also facilitate interoperability between various aircraft, assist with research efforts, and help to streamline the airworthiness certification process. 
-            
+          <p>We are developing C-FCS for safe control of aircraft ranging from small hand-launched unmanned aircraft to 
+            large, manned aircraft by leveraging the capability of plug-and-play sensors, processors, and actuators. A common 
+            system allows for standardization across a fleet of varying types of aircraft which reduces training, maintenance, 
+            logistics and upgrade costs. C-FCS can also facilitate interoperability between various aircraft, assist with research 
+            efforts, and help to streamline the airworthiness certification process. 
           </p>
         </div>
         <div class="box box2">
@@ -64,7 +67,9 @@
             piloted by minimally trained pilots. Handling qualities evaluated to ensure safe vehicle operation by minimally trained 
             pilots, even in degraded vehicle states</p>
         </div>
-        <div class="box box4">
+        <div class="box-redundancy box4">
+          <br>
+          <br>
           <img src="./img/cfcs_redundancy.png">
         </div>
         <div class="box box5">
@@ -72,7 +77,7 @@
           <h1>Air Force Partnership</h1>
           <br>
           <p>We were awarded an AFWERX, Agility Prime Phase I Small Business Technology Transfer (STTR) fall 2020 for further 
-              improvement and customer exploration. Our partners are Pennsylvania State University (PSU), Systems Technology Inc (STI) 
+              improvement and customer exploration. Our partners include Pennsylvania State University (PSU), Systems Technology Inc (STI) 
               and Beta Technologies. PSU bring expertise in the areas of autonomous fault-detection and reconfiguration, STI brings expertise 
               in control law design and handling qualities analysis, and Beta Technologies brings unique feedback as a potential customer and 
               developer of a manned eVTOL vehicle. Together we are creating a fault-tolerant, plug-and-play common flight control system.
