MQI: add small screen dropdown, customer icons

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <a href="#" class="nav-button"><img src="./img/hamburger.png"></a>
             <nav class="nav">
               <ul>
-                <li class="current"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="control.html" class="nav-link">Flight Control</a></li>
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li class="current"><a href="control.html" class="nav-link">Flight Control</a></li>
                 <li><a href="cfcs.html" class="nav-link">C-FCS</a></li>
                 <li><a href="pdas.html" class="nav-link">Data Acquisition</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
+                <li><a href="index.html#contact" class="nav-link">Contact</a></li>
                 <li><a href="team.html" class="nav-link">Team</a></li>
               </ul>
             </nav> 
@@ -82,7 +82,7 @@
           <p>Contact us today and let's talk about what you would like to build together.</p>
           <a href="mailto:info@bolderflight.com">info@bolderflight.com</a>
         </div>
-        <div class="box gray-showcase box15">
+        <div class="box logo-showcase box15">
           <div class="showcase-img"><img src="./img/NASA.png"></div>
           <div class="showcase-img"><img src="./img/USAF.png"></div>
           <div class="showcase-img"><img src="./img/ITPS-gold.svg"></div>
