MQI: add small screen dropdown, customer icons

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <a href="#" class="nav-button"><img src="./img/hamburger.png"></a>
             <nav class="nav">
               <ul>
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li class="current"><a href="control.html" class="nav-link">Flight Control</a></li>
+                <li class="current"><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="control.html" class="nav-link">Flight Control</a></li>
                 <li><a href="cfcs.html" class="nav-link">C-FCS</a></li>
                 <li><a href="pdas.html" class="nav-link">Data Acquisition</a></li>
                 <li><a href="index.html#contact" class="nav-link">Contact</a></li>
