--- a/control.html
+++ b/control.html
@@ -29,6 +29,7 @@
                 <li class="current"><a href="control.html" class="nav-link">Flight Control</a></li>
                 <li><a href="cfcs.html" class="nav-link">C-FCS</a></li>
                 <li><a href="pdas.html" class="nav-link">Data Acquisition</a></li>
+                <li><a href="store.html" class="nav-link">Store</a></li>
                 <li><a href="index.html#contact" class="nav-link">Contact</a></li>
                 <li><a href="team.html" class="nav-link">Team</a></li>
               </ul>
@@ -39,6 +40,7 @@
                 <li class="current"><a href="control.html" class="nav-small-link">Control</a></li>
                 <li><a href="cfcs.html" class="nav-small-link">C-FCS</a></li>
                 <li><a href="pdas.html" class="nav-small-link">PDAS</a></li>
+                <li><a href="store.html" class="nav-link">Store</a></li>
                 <li><a href="index.html#contact" class="nav-small-link">Contact</a></li>
                 <li><a href="team.html" class="nav-small-link">Team</a></li>
               </ul>
