Store updated. Updated picture of FMU to FMU-R-V2

--- a/control.html
+++ b/control.html
@@ -58,7 +58,7 @@
           <p>Bring your UAS and UAM technology to market safer and at a fraction of the time and cost. Our flight control system is extraordinarily flexible while maintaining low-latency and determinism. This technology enables us to rapidly and safely integrate our control system on your vehicle, conduct ground and flight testing, and collect early stage data; critical to validating your product and developing vehicle models, simulations, and control laws. When you're ready to commercialize your technology, we will repackage our system for your vehicle and manage control system manufacturing, integration, and software updates.</p>
         </div>
         <div class="box box2">
-          <img src="./img/fcs.png">
+          <img src="./img/fmu_r_v2.png">
         </div>
         <div class="box box3">
           <h1>Flexibility and Robustness</h1>
