--- a/store.html
+++ b/store.html
@@ -52,7 +52,7 @@
     <div id="space"></div>
     <div class="store">
       <h1>Bolder Flight Systems Store</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime iusto nisi delectus at aperiam perferendis sint velit, voluptatum beatae nam unde suscipit consequatur error esse nobis praesentium dolore autem.</p>
+        <p>Bolder Flight Systems has two research flight control system packages; one for fixed-wing and one for multi-rotor aircraft. Alternatively, the Research Flight Management Unit (FMU-R) and other components can also be purchased seperately and tailored to your application. Please contact <a href="mailto:info@bolderflight.com">info@bolderflight.com</a> if you have any questions, would like to explore customization options, or if you're an international customer and would like to place an order.</p>
       </div>
     </div>
       <div class="store">
