updated the header for small screens

--- a/pdas.html
+++ b/pdas.html
@@ -40,7 +40,7 @@
                 <li><a href="control.html" class="nav-small-link">Control</a></li>
                 <li><a href="cfcs.html" class="nav-small-link">C-FCS</a></li>
                 <li class="current"><a href="pdas.html" class="nav-small-link">PDAS</a></li>
-                <li><a href="store.html" class="nav-link">Store</a></li>
+                <li><a href="store.html" class="nav-small-link">Store</a></li>
                 <li><a href="index.html#contact" class="nav-small-link">Contact</a></li>
                 <li><a href="team.html" class="nav-small-link">Team</a></li>
               </ul>
@@ -49,7 +49,7 @@
         </div>
       </div>
     </header>
-    <div id="space"></div>
+    <div id="space-header"></div>
     <section>
       <div id="boxes">
         <div class="box box1">
