--- a/control.html
+++ b/control.html
@@ -49,7 +49,7 @@
         </div>
       </div>
     </header>
-    <div id="space"></div>
+    <div id="space-header"></div>
     <section>
       <div id="boxes">
         <div class="box box1">
