--- a/store.html
+++ b/store.html
@@ -39,8 +39,8 @@
                 <li><a href="index.html" class="nav-small-link">Home</a></li>
                 <li><a href="control.html" class="nav-small-link">Control</a></li>
                 <li><a href="cfcs.html" class="nav-small-link">C-FCS</a></li>
-                <li><a href="pdas.html" class="nav-link">Data Acquisition</a></li>
-                <li class="current"><a href="store.html" class="nav-link">Store</a></li>
+                <li><a href="pdas.html" class="nav-small-link">PDAS</a></li>
+                <li class="current"><a href="store.html" class="nav-small-link">Store</a></li>
                 <li><a href="index.html#contact" class="nav-small-link">Contact</a></li>
                 <li><a href="team.html" class="nav-small-link">Team</a></li>
               </ul>
@@ -49,7 +49,7 @@
         </div>
       </div>
     </header>
-    <div id="space"></div>
+    <div id="space-header"></div>
     <div class="store">
       <h1>Bolder Flight Systems Store</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime iusto nisi delectus at aperiam perferendis sint velit, voluptatum beatae nam unde suscipit consequatur error esse nobis praesentium dolore autem.</p>
