Added rest of team

--- a/about.html
+++ b/about.html
@@ -40,6 +40,18 @@
         <h3 class="head">CEO and Founder</h3>
         <p class="desc">Brian has extensive experience designing, prototyping, and manufacturing embedded hardware and software systems. Prior to founding Bolder Flight Systems, Brian was the Director of the University of Minnesota UAS Research Labs, which he grew from a small research group into a premier flight research organization. Previously, he was a researcher at the NASA Armstrong Flight Research Center (AFRC) where he conducted innovative parameter estimation research and led an extensive ground and flight test campaign on the X-48B. Brian was the NASA Deputy Chief Engineer on the X-48C through development and initial flight testing and was the Technical Lead for Subsonic Fixed Wing Flight Controls and Dynamics research at NASA AFRC. He is a member of the AIAA Atmospheric Flight Mechanics Technical Committee and has over 40 publications, invited presentations, acknowledgments, and news articles. Brian began building, flying, and modifying RC aircraft in middle-school and is an experienced FAA Part 107 certified RC pilot. He has a private pilot’s license, instrument rating, complex and high performance endorsements, and a lifelong passion for aviation.</p>
       </div>
+      <div class="team-box">
+        <img class="team-img"src="./images/mqi.png">
+        <h2 class="head">Melissa Iszler</h2>
+        <h3 class="head">COO</h3>
+        <p class="desc">Melissa Iszler has a diverse set of skills and leadership experience. She has worked on 13 different aircraft of various types consisting of UAS, helicopters, fighters, and one bomber. Prior to joining Bolder Flight Systems, Melissa worked in the private industry and for the Department of Defense in the engineering fields of aircraft airworthiness, flight test, aircraft performance, flying qualities, air data, structures, maintenance, and repairs. She has experience in various types of engineering from technical to hands-on roles such as control room operations, computer modeling, manufacturing support, maintenance field support, and aircraft repair and inspections. She also has a private pilot’s license.</p> 
+      </div>
+      <div class="team-box">
+        <img class="team-img" src="./images/kwm.png">
+        <h2 class="head">Kevin Maris</h2>
+        <h3 class="head">CFO</h3>
+        <p class="desc">Kevin brings a unique background and specialized skillset to Bolder Flight Systems as he currently serves in the role of Chief Financial Officer.  He began his career in the accounting and finance world as a CFO for a regional, mid-west distribution company, where he refined his technical skills, grew as a leader, and served for nearly a decade.  Driven to add greater value, Kevin realized the need to become proficient in sales and marketing.  Fortunately, these activities came natural to him and he excelled in a variety of business development leadership roles in the investment, distribution, manufacturing, and aerospace markets.  In his latest role, Kevin led the business development efforts for an aerospace engineering firm, primarily specializing in handling qualities, vehicle dynamics and controls.  He has worked with a variety of commercial aerospace customers and government organizations.</p> 
+      </div>
     </div>
   </main>
   <footer>
