--- a/freewave-radio-modem.html
+++ b/freewave-radio-modem.html
@@ -22,6 +22,7 @@
       <nav>
         <ul>
           <li><a href="index.html" class="current-page">STORE</a></li>
+          <li><a href="onflight.html" class="page-link">ONFLIGHT</a></li>
           <li><a href="services.html" class="page-link">SERVICES</a></li>
           <li><a href="about.html" class="page-link">ABOUT</a></li>
         </ul>
