--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <nav>
         <ul>
           <li><a href="index.html" class="current-page">STORE</a></li>
+          <li><a href="onflight.html" class="page-link">ONFLIGHT</a></li>
           <li><a href="services.html" class="page-link">SERVICES</a></li>
           <li><a href="about.html" class="page-link">ABOUT</a></li>
         </ul>
@@ -30,6 +31,9 @@
   </header>
   <main>
     <div class="container flex-column">
+      <div id="eaa">
+        <p>We'll be at EAA AirVenture July 20th to August 2nd. Any orders placed during this time will be shipped when we return.</p>
+      </div>
       <div class="hero">
         <img class="eaa" src="images/2023-AirVenture.png" alt="">
         <p>Visit us at EAA AirVenture Booth 444!</p>
@@ -39,6 +43,11 @@
         <p class="desc">The most innovative data acquisition systems available.</p>
       </div>
       <div class="card-holder">
+        <a href="onflight.html" class="card">
+          <img src="assets/onflight/onflight_200.png" class="card-img" alt="">
+          <h3 class="card-header">OnFlight Hub</h3>
+          <p class="card-lead">An innovative, portable data logger for general aviation ideal for students, CFIs, and data-centric pilots.</p>
+        </a>
         <a href="pdas.html" class="card">
           <img src="assets/pdas/pdas_200.png" class="card-img" alt="">
           <h3 class="card-header">Portable Data Acquisition System (PDAS)</h3>
