Removed some placeholders to fill later

--- a/onflight.html
+++ b/onflight.html
@@ -323,8 +323,8 @@
           <h2 class="head">Technical Specifications</h2>
             <ul class="services-ul">
               <li>50 Hz sample rate</li>
-              <li>Size: FILL</li>
-              <li>Weight: FILL</li>
+              <!-- <li>Size: FILL</li>
+              <li>Weight: FILL</li> -->
               <li>System Data (50 Hz):
                 <ul class="services-ul-l2">
                   <li>Time since boot, microsecond accuracy</li>
