Updated now back from OSH

--- a/onflight.html
+++ b/onflight.html
@@ -58,9 +58,9 @@
       <div class="services-holder-reverse">
         <div>
           <h2 class="head">Pre-Orders</h2>
-          <p class="services-desc-left" id="center-me">Bolder Flight Systems has currently manufactured 100 OnFlight Hubs. These are currently being tested on the ground and in flight. We are accepting pre-orders and are offering a special discount during EAA AirVenture. Your credit card will be charged when your order is placed. If you're one of the first 100 customers to place an order, we anticipate shipping OnFlight Hub by October 31, 2023. We are currently putting together another manufacturing run based on the number of pre-orders that are placed during AirVenture. We anticipate that these will ship by December 15, 2023. Orders will be fulfilled in the order in which they are placed and we will accept returns up to 1 year from the date that your OnFlight Hub is shipped. Following this second manufacturing run, we will maintain regular availability of OnFlight Hub in our store.</p>
+          <p class="services-desc-left" id="center-me">Bolder Flight Systems has currently manufactured 100 OnFlight Hubs. These are currently being tested on the ground and in flight. We are accepting pre-orders; your credit card will be charged when your order is placed. If you're one of the first 100 customers to place an order, we anticipate shipping OnFlight Hub by October 31, 2023. We are currently putting together another manufacturing run and we anticipate that these will ship by December 15, 2023. Orders will be fulfilled in the order in which they are placed and we will accept returns up to 1 year from the date that your OnFlight Hub is shipped. Following this second manufacturing run, we will maintain regular availability of OnFlight Hub in our store.</p>
           <br>
-          <div id="onflight-price"><p>$275 (EAA AirVenture Sale), Regularly $299</p></div>
+          <div id="onflight-price"><p>Pre-Order: $299</p></div>
           <div id="onflight-button">
             
             <div id='product-component-1689705829064'></div>
