Updated onflight page

--- a/onflight.html
+++ b/onflight.html
@@ -34,355 +34,25 @@
       <div class="services-holder-reverse">
         <div>
           <h2 class="head">OnFlight Hub</h2>
-          <p class="services-desc-left">OnFlight is a family of products to provide high quality data logging to the General Aviation pilot. OnFlight is ideal for student pilots, CFIs, experimental aircraft builders conducting their Phase I flight test program, and pilots who would enjoy to see their previous flights and their performance. OnFlight Hub is the central component and includes:</p>
+          <p class="services-desc-left">OnFlight is a high quality data logger for the General Aviation pilot. OnFlight is ideal for student pilots, CFIs, experimental aircraft builders conducting their Phase I flight test program, and pilots who would enjoy to see their previous flights and their performance. OnFlight Hub includes:</p>
           <ul class="services-ul">
             <li>50 Hz sample rate, logging to a micro SD card</li>
             <li>High accuracy GPS-aided INS</li>
-            <li>Data available in MATLAB or CSV format</li>
-            <li>Integrations with CloudAhoy and FlightData web apps</li>
+            <li>Data available in CSV format</li>
             <li>Real time streaming to ForeFlight for use as a GPS source and a backup AHRS</li>
             <li>13+ hour battery life, 2.5 hours to charge with a USB-C port</li>
-            <li>Wireless integration with a wing-tie down mounted portable air data probe</li>
             <li>GoPro and tripod adapters provide flexible and fast mounting options</li>
           </ul>
         </div>
         <img class="services-img" src="assets/onflight/iso.png" alt="">
       </div>
-      <div class="services-holder">
-        <img class="services-img" src="assets/onflight/Render.png" alt="">
-        <div>
-          <h2 class="head">OnFlight Air</h2>
-          <p class="services-desc-right">Bolder Flight Systems is developing a portable air data probe, OnFlight Air, which will be able to quickly attach to wing tie-down bolts and wing struts. OnFlight Air will measure static and dynamic pressures, Outside Air Temperature (OAT), indicated airspeed, true airspeed, pressure altitude, density altitude, and angle-of-attack. Data is transmitted to OnFlight Hub for logging.</p>
-        </div>
-      </div>
-      <div class="services-holder-reverse">
-        <div>
-          <h2 class="head">Pre-Orders</h2>
-          <p class="services-desc-left" id="center-me">Bolder Flight Systems has currently manufactured 100 OnFlight Hubs. These are currently being tested on the ground and in flight. We are accepting pre-orders; your credit card will be charged when your order is placed. If you're one of the first 100 customers to place an order, we anticipate shipping OnFlight Hub by October 31, 2023. We are currently putting together another manufacturing run and we anticipate that these will ship by December 15, 2023. Orders will be fulfilled in the order in which they are placed and we will accept returns up to 1 year from the date that your OnFlight Hub is shipped. Following this second manufacturing run, we will maintain regular availability of OnFlight Hub in our store.</p>
-          <br>
-          <div id="onflight-price"><p>Pre-Order: $299</p></div>
-          <div id="onflight-button">
-            
-            <div id='product-component-1689705829064'></div>
-<script type="text/javascript">
-/*<![CDATA[*/
-(function () {
-  var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
-  if (window.ShopifyBuy) {
-    if (window.ShopifyBuy.UI) {
-      ShopifyBuyInit();
-    } else {
-      loadScript();
-    }
-  } else {
-    loadScript();
-  }
-  function loadScript() {
-    var script = document.createElement('script');
-    script.async = true;
-    script.src = scriptURL;
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
-    script.onload = ShopifyBuyInit;
-  }
-  function ShopifyBuyInit() {
-    var client = ShopifyBuy.buildClient({
-      domain: 'bolder-flight-systems.myshopify.com',
-      storefrontAccessToken: '5d031c37716943c132181e6697fc221a',
-    });
-    ShopifyBuy.UI.onReady(client).then(function (ui) {
-      ui.createComponent('product', {
-        id: '6868953694310',
-        node: document.getElementById('product-component-1689705829064'),
-        moneyFormat: '%24%7B%7Bamount%7D%7D',
-        options: {
-  "product": {
-    "styles": {
-      "product": {
-        "@media (min-width: 601px)": {
-          "max-width": "calc(25% - 20px)",
-          "margin-left": "20px",
-          "margin-bottom": "50px"
-        }
-      },
-      "button": {
-        "font-size": "16px",
-        "padding-top": "16px",
-        "padding-bottom": "16px",
-        ":hover": {
-          "background-color": "#69a7cf"
-        },
-        "background-color": "#75b9e6",
-        ":focus": {
-          "background-color": "#69a7cf"
-        },
-        "border-radius": "6px",
-        "padding-left": "25px",
-        "padding-right": "25px"
-      },
-      "quantityInput": {
-        "font-size": "16px",
-        "padding-top": "16px",
-        "padding-bottom": "16px"
-      },
-      "description": {
-        "font-size": "16px"
-      }
-    },
-    "contents": {
-      "img": false,
-      "title": false,
-      "price": false
-    },
-    "text": {
-      "button": "Add to cart"
-    }
-  },
-  "productSet": {
-    "styles": {
-      "products": {
-        "@media (min-width: 601px)": {
-          "margin-left": "-20px"
-        }
-      }
-    }
-  },
-  "modalProduct": {
-    "contents": {
-      "img": false,
-      "imgWithCarousel": true,
-      "button": false,
-      "buttonWithQuantity": true
-    },
-    "styles": {
-      "product": {
-        "@media (min-width: 601px)": {
-          "max-width": "100%",
-          "margin-left": "0px",
-          "margin-bottom": "0px"
-        }
-      },
-      "button": {
-        "font-size": "16px",
-        "padding-top": "16px",
-        "padding-bottom": "16px",
-        ":hover": {
-          "background-color": "#69a7cf"
-        },
-        "background-color": "#75b9e6",
-        ":focus": {
-          "background-color": "#69a7cf"
-        },
-        "border-radius": "6px",
-        "padding-left": "25px",
-        "padding-right": "25px"
-      },
-      "quantityInput": {
-        "font-size": "16px",
-        "padding-top": "16px",
-        "padding-bottom": "16px"
-      },
-      "title": {
-        "color": "#2b2828"
-      },
-      "description": {
-        "font-family": "Helvetica Neue, sans-serif",
-        "font-weight": "normal",
-        "font-size": "16px",
-        "color": "#4c4c4c"
-      }
-    }
-  },
-  "option": {},
-  "cart": {
-    "styles": {
-      "button": {
-        "font-size": "16px",
-        "padding-top": "16px",
-        "padding-bottom": "16px",
-        ":hover": {
-          "background-color": "#69a7cf"
-        },
-        "background-color": "#75b9e6",
-        ":focus": {
-          "background-color": "#69a7cf"
-        },
-        "border-radius": "6px"
-      },
-      "title": {
-        "color": "#4c4c4c"
-      },
-      "header": {
-        "color": "#4c4c4c"
-      },
-      "lineItems": {
-        "color": "#4c4c4c"
-      },
-      "subtotalText": {
-        "color": "#4c4c4c"
-      },
-      "subtotal": {
-        "color": "#4c4c4c"
-      },
-      "notice": {
-        "color": "#4c4c4c"
-      },
-      "currency": {
-        "color": "#4c4c4c"
-      },
-      "close": {
-        "color": "#4c4c4c",
-        ":hover": {
-          "color": "#4c4c4c"
-        }
-      },
-      "empty": {
-        "color": "#4c4c4c"
-      },
-      "noteDescription": {
-        "color": "#4c4c4c"
-      },
-      "discountText": {
-        "color": "#4c4c4c"
-      },
-      "discountIcon": {
-        "fill": "#4c4c4c"
-      },
-      "discountAmount": {
-        "color": "#4c4c4c"
-      }
-    },
-    "popup": false
-  },
-  "toggle": {
-    "styles": {
-      "toggle": {
-        "background-color": "#75b9e6",
-        ":hover": {
-          "background-color": "#69a7cf"
-        },
-        ":focus": {
-          "background-color": "#69a7cf"
-        }
-      },
-      "count": {
-        "font-size": "16px"
-      }
-    }
-  },
-  "lineItem": {
-    "styles": {
-      "variantTitle": {
-        "color": "#4c4c4c"
-      },
-      "title": {
-        "color": "#4c4c4c"
-      },
-      "price": {
-        "color": "#4c4c4c"
-      },
-      "fullPrice": {
-        "color": "#4c4c4c"
-      },
-      "discount": {
-        "color": "#4c4c4c"
-      },
-      "discountIcon": {
-        "fill": "#4c4c4c"
-      },
-      "quantity": {
-        "color": "#4c4c4c"
-      },
-      "quantityIncrement": {
-        "color": "#4c4c4c",
-        "border-color": "#4c4c4c"
-      },
-      "quantityDecrement": {
-        "color": "#4c4c4c",
-        "border-color": "#4c4c4c"
-      },
-      "quantityInput": {
-        "color": "#4c4c4c",
-        "border-color": "#4c4c4c"
-      }
-    }
-  }
-},
-      });
-    });
-  }
-})();
-/*]]>*/
-</script>
-          </div>
-          <br>
-          <p id="center-me">OnFlight Air software was prototyped and tested using components from our other data acquisition and flight control systems. Prototypes of OnFlight Air are currently in manufacturing and will be in flight testing in fall of 2023. We anticipate general availability in early 2024. We are not accepting pre-orders of OnFlight Air at this time.</p>
-        </div>
-      </div>
-      <div class="services-holder-reverse">
-        <div>
-          <h2 class="head">Technical Specifications</h2>
-            <ul class="services-ul">
-              <li>50 Hz sample rate</li>
-              <!-- <li>Size: FILL</li>
-              <li>Weight: FILL</li> -->
-              <li>System Data (50 Hz):
-                <ul class="services-ul-l2">
-                  <li>Time since boot, microsecond accuracy</li>
-                  <li>Battery voltage and low-pass filtered battery voltage</li>
-                </ul>
-              </li>
-              <li>IMU Data (50 Hz):
-                <ul class="services-ul-l2">
-                  <li>3-axis accelerometer, gyro, and magnetometer</li>
-                  <li>IMU and magnetometer sensor temperatures</li>
-                </ul>
-              </li>
-              <li>Static Pressure Data (50 Hz):
-                <ul class="services-ul-l2">
-                  <li>Static presssure</li>
-                  <li>Pressure sensor temperature</li>
-                </ul>
-              </li>
-              <li> GPS Data (10 Hz):
-                <ul class="services-ul-l2">
-                  <li>UTC year, day, month, hour, minute, and second</li>
-                  <li>Fix status and number of satellites tracked</li>
-                  <li>Estimated horizontal and vertical position and speed accuracies</li>
-                  <li>Latitude and longitude</li>
-                  <li>Altitude relative to the WGS ellipsoid</li>
-                  <li>North, east and down velocity, measured using the doppler effect</li>
-                </ul>
-              </li>
-              <li>Aircraft State Estimation Data (50 Hz):
-                <ul class="services-ul-l2">
-                  <li>Pitch and roll attitude</li>
-                  <li>Heading and ground track relative to true north</li>
-                  <li>Ground speed, flight path angle, load factor, and climb rate</li>
-                  <li>North, east, and down velocity</li>
-                  <li>Latitude and longitude</li>
-                  <li>Altitude relative to the WGS ellipsoid and MSL altitude</li>
-                  <li>Filtered static pressure and pressure altitude</li>
-                  <li>Filtered accelerometer, gyro, and magnetometer data with biases estimated in real-time and removed</li>
-                </ul>
-              </li>
-              <li>OnFlight Air Data:
-                <ul class="services-ul-l2">
-                  <li>Static and differential pressure</li>
-                  <li>Outside air temperature</li>
-                  <li>Filtered pressures and temperature</li>
-                  <li>Indicated and true airspeed</li>
-                  <li>Pressure altitude and density altitude</li>
-                  <li>Angle-of-attack</li>
-                  <li>OnFlight Air battery voltage</li>
-                </ul>
-              </li>
-            </ul> 
-        </div>
-      </div>
       <div>
         <h2 class="head">Documents</h2>
         <ul class="services-ul">
           <li><a class="link" href="assets/onflight/OnFlight Brochure.pdf">Brochure</a>: one page OnFlight Hub brochure.</li>
+          <li><a class="link" href="assets/onflight/User Manual.pdf">User Manual</a>: OnFlight Hub user manual.</li>
+          <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/d9toz47hs1691fnw57jsk/OnFlight-Data-Converter.app.zip?rlkey=ihysq44zyeag71dkebkk6rr65&dl=0">MacOS Data Converter (hosted on DropBox)</a>: OnFlight Hub data converter for MacOS.</li>
+          <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/9hpprd5hjjiam3jnyypum/OnFlight-Data-Converter-Setup-1.0.0.exe?rlkey=jyu8vcuf1h8ngn1z1gmrt9g9s&dl=0">Windows Data Converter (Hosted on DropBox)</a>: OnFlight Hub data converter for Windows.</li>
         </ul>
       </div>
   </main>
