Updated text about onflight data converter download

--- a/onflight.html
+++ b/onflight.html
@@ -51,8 +51,8 @@
         <ul class="services-ul">
           <li><a class="link" href="assets/onflight/OnFlight Brochure.pdf">Brochure</a>: one page OnFlight Hub brochure.</li>
           <li><a class="link" href="assets/onflight/User Manual.pdf">User Manual</a>: OnFlight Hub user manual.</li>
-          <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/d9toz47hs1691fnw57jsk/OnFlight-Data-Converter.app.zip?rlkey=ihysq44zyeag71dkebkk6rr65&dl=0">MacOS Data Converter (hosted on DropBox)</a>: OnFlight Hub data converter for MacOS.</li>
-          <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/9hpprd5hjjiam3jnyypum/OnFlight-Data-Converter-Setup-1.0.0.exe?rlkey=jyu8vcuf1h8ngn1z1gmrt9g9s&dl=0">Windows Data Converter (Hosted on DropBox)</a>: OnFlight Hub data converter for Windows.</li>
+          <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/d9toz47hs1691fnw57jsk/OnFlight-Data-Converter.app.zip?rlkey=ihysq44zyeag71dkebkk6rr65&dl=0">MacOS Data Converter</a>: OnFlight Hub data converter for MacOS.</li>
+          <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/9hpprd5hjjiam3jnyypum/OnFlight-Data-Converter-Setup-1.0.0.exe?rlkey=jyu8vcuf1h8ngn1z1gmrt9g9s&dl=0">Windows Data Converter</a>: OnFlight Hub data converter for Windows.</li>
         </ul>
       </div>
   </main>
