Commenting out the converter applications for now

--- a/onflight.html
+++ b/onflight.html
@@ -54,8 +54,8 @@
           <li><a class="link" href="assets/onflight/CSV Data Log.pdf">CSV Data Log</a>: Description of the CSV data log fields.</li>
           <li><a class="link" href="assets/onflight/Binary Data Log.pdf">Binary Data Log</a>: Description of the binary data log format.</li>
           <li><a class="link" href="assets/onflight/UDP Description.pdf">UDP Broadcast</a>: Description of the UDP broadcast data packet.</li>
-          <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/d9toz47hs1691fnw57jsk/OnFlight-Data-Converter.app.zip?rlkey=ihysq44zyeag71dkebkk6rr65&dl=0">MacOS Data Converter</a>: OnFlight Hub data converter for MacOS.</li>
-          <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/9hpprd5hjjiam3jnyypum/OnFlight-Data-Converter-Setup-1.0.0.exe?rlkey=jyu8vcuf1h8ngn1z1gmrt9g9s&dl=0">Windows Data Converter</a>: OnFlight Hub data converter for Windows.</li>
+          <!-- <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/d9toz47hs1691fnw57jsk/OnFlight-Data-Converter.app.zip?rlkey=ihysq44zyeag71dkebkk6rr65&dl=0">MacOS Data Converter</a>: OnFlight Hub data converter for MacOS.</li>
+          <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/9hpprd5hjjiam3jnyypum/OnFlight-Data-Converter-Setup-1.0.0.exe?rlkey=jyu8vcuf1h8ngn1z1gmrt9g9s&dl=0">Windows Data Converter</a>: OnFlight Hub data converter for Windows.</li> -->
         </ul>
       </div>
   </main>
