--- a/onflight.html
+++ b/onflight.html
@@ -54,6 +54,8 @@
           <li><a class="link" href="assets/onflight/CSV Data Log.pdf">CSV Data Log</a>: Description of the CSV data log fields.</li>
           <li><a class="link" href="assets/onflight/Binary Data Log.pdf">Binary Data Log</a>: Description of the binary data log format.</li>
           <li><a class="link" href="assets/onflight/UDP Description.pdf">UDP Broadcast</a>: Description of the UDP broadcast data packet.</li>
+          <li><a class="link" href="assets/onflight/External Air Data Interface.pdf">UDP Broadcast</a>: Description of the interface to send OnFlight Hub data from an external air data system.</li>
+          <li><a class="link" href="assets/onflight/External AGL Altimeter Interface.pdf">UDP Broadcast</a>: Description of the interface to send OnFlight Hub data from an external AGL altimeter sensor.</li>
           <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/6jbujf22crz3s3qwhqnx5/OnFlight-Data-Converter-1.0.0-universal.dmg?rlkey=jionzkd4gyw2rr1homuwbff5w&dl=0">MacOS Data Converter</a>: OnFlight Hub data converter for MacOS.</li>
           <li><a class="link" href="https://dl.dropboxusercontent.com/scl/fi/t2q2anbq488t26vqguzjt/OnFlight-Data-Converter-Setup-1.0.0.exe?rlkey=z7o8sv4r1m1zbwybm1s24yqjf&dl=0">Windows Data Converter</a>: OnFlight Hub data converter for Windows.</li>
         </ul>
